<resources>
    <string name="app_name">WhereBus</string>
    <string name="title_activity_maps">Map</string>
    <string name="Mapbutton">Current Bus Location</string>
    <string name="Listbutton">Students on Board</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_upp">Create new account</string>
    <string name="sign_in">Sign in</string>
    <string name="login">login</string>
    <string name="userpassword">User password</string>
    <string name="useremail">User email</string>
    <string name="reset_password">Reset password</string>
    <string name="emailaddress">Email Address</string>
    <string name="send_email">send Email</string>
    <string name="sign_out">Sign out</string>
    <string name="notificationchannel1">channel1</string>
    <string name="channel1description">test</string>
    <string name="notifi">Send notification to parents</string>

</resources>
